[core] Move RPC-related build targets out of the global `BUILD` file (#55149)
Previously, we had all of the RPC-related targets in the global build
file. This PR is a first step towards cleaning this up: I've moved most
of the targets to the `src/ray/rpc` subpackage. The `cc_grpc_library`
targets have been moved to `src/ray/protobuf` because they need to be in
the same subtree as the `proto_library` targets they depend on.

I've also made it possible to override our existing public visibility
default. We should incrementally override this and then remove the
defaulting.

After this, I plan to:

- Vanquish the `grpc_common_lib` behemoth.
- Split out the client & server targets for each RPC library (they are
bundled today, which makes no sense).
- Remove some redundant dependencies (passing both the `proto_library`
and the `cc_grpc_library`).
- ???
- Profit!

---------

Signed-off-by: Edward Oakes <ed.nmi.oakes@gmail.com>
Signed-off-by: jugalshah291 <shah.jugal291@gmail.com>

--- a/src/ray/common/test/BUILD.bazel
+++ b/src/ray/common/test/BUILD.bazel
@@ -49,9 +49,9 @@ ray_cc_test(
         "team:core",
     ],
     deps = [
-        "//:grpc_common_lib",
         "//:ray_mock_syncer",
         "//src/ray/common:ray_syncer",
+        "//src/ray/rpc:grpc_common_lib",
         "//src/ray/util:path_utils",
         "@com_google_googletest//:gtest",
     ],
@@ -173,9 +173,9 @@ ray_cc_test(
     ],
     tags = ["team:core"],
     deps = [
-        "//:grpc_common_lib",
         "//src/ray/common:grpc_util",
         "//src/ray/common:status",
+        "//src/ray/rpc:grpc_common_lib",
         "@com_google_googletest//:gtest_main",
     ],
 )
