--- a/src/ray/core_worker/BUILD.bazel
+++ b/src/ray/core_worker/BUILD.bazel
@@ -29,7 +29,6 @@ ray_cc_library(
         ":reference_count",
         ":task_event_buffer",
         ":task_receiver",
-        "//:worker_rpc",
         "//src/ray/common/cgroup:cgroup_context",
         "//src/ray/common/cgroup:cgroup_manager",
         "//src/ray/common/cgroup:constants",
@@ -38,6 +37,7 @@ ray_cc_library(
         "//src/ray/protobuf:pubsub_cc_proto",
         "//src/ray/pubsub:pubsub_lib",
         "//src/ray/raylet_client:raylet_client_lib",
+        "//src/ray/rpc:core_worker_rpc",
         "//src/ray/stats:stats_lib",
         "//src/ray/util",
         "//src/ray/util:container_util",
@@ -92,10 +92,10 @@ ray_cc_library(
     name = "scheduling_queue",
     hdrs = ["transport/scheduling_queue.h"],
     deps = [
-        "//:rpc_server_call",
         "//src/ray/common:id",
         "//src/ray/common:task_common",
-        "//src/ray/protobuf:worker_cc_proto",
+        "//src/ray/protobuf:core_worker_cc_proto",
+        "//src/ray/rpc:server_call",
     ],
 )
 
@@ -134,8 +134,8 @@ ray_cc_library(
         ":core_worker_context",
         "//src/ray/common:id",
         "//src/ray/common:task_common",
+        "//src/ray/protobuf:core_worker_cc_proto",
         "//src/ray/protobuf:gcs_cc_proto",
-        "//src/ray/protobuf:worker_cc_proto",
         "@com_google_absl//absl/types:optional",
         "@com_google_googletest//:gtest_prod",
     ],
@@ -166,7 +166,7 @@ ray_cc_library(
         "//src/ray/common:task_common",
         "//src/ray/gcs:gcs_pb_util",
         "//src/ray/gcs/gcs_client:gcs_client_lib",
-        "//src/ray/protobuf:worker_cc_proto",
+        "//src/ray/protobuf:core_worker_cc_proto",
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_googletest//:gtest_prod",
     ],
@@ -178,11 +178,11 @@ ray_cc_library(
     hdrs = ["reference_count.h"],
     deps = [
         ":lease_policy",
-        "//:grpc_server",
-        "//:worker_rpc",
         "//src/ray/common:id",
         "//src/ray/protobuf:common_cc_proto",
         "//src/ray/pubsub:pubsub_lib",
+        "//src/ray/rpc:core_worker_rpc",
+        "//src/ray/rpc:grpc_server",
         "//src/ray/util:logging",
         "@com_google_absl//absl/base:core_headers",
         "@com_google_absl//absl/synchronization",
@@ -207,7 +207,6 @@ ray_cc_library(
     srcs = ["task_event_buffer.cc"],
     hdrs = ["task_event_buffer.h"],
     deps = [
-        "//:event_aggregator_client",
         "//src/ray/common:asio",
         "//src/ray/common:id",
         "//src/ray/common:task_common",
@@ -215,6 +214,7 @@ ray_cc_library(
         "//src/ray/gcs/gcs_client:gcs_client_lib",
         "//src/ray/protobuf:export_task_event_cc_proto",
         "//src/ray/protobuf:gcs_cc_proto",
+        "//src/ray/rpc:event_aggregator_client",
         "//src/ray/util:counter_map",
         "//src/ray/util:event",
         "@boost//:circular_buffer",
@@ -272,7 +272,7 @@ ray_cc_library(
         "//src/ray/common:status",
         "//src/ray/common:task_common",
         "//src/ray/protobuf:common_cc_proto",
-        "//src/ray/protobuf:worker_cc_proto",
+        "//src/ray/protobuf:core_worker_cc_proto",
         "@com_google_absl//absl/types:optional",
     ],
 )
@@ -290,7 +290,7 @@ ray_cc_library(
         "//src/ray/common:ray_object",
         "//src/ray/gcs:gcs_pb_util",
         "//src/ray/protobuf:common_cc_proto",
-        "//src/ray/protobuf:worker_cc_proto",
+        "//src/ray/protobuf:core_worker_cc_proto",
         "//src/ray/stats:stats_metric",
         "//src/ray/util",
         "//src/ray/util:counter_map",
@@ -328,12 +328,12 @@ ray_cc_library(
         ":dependency_resolver",
         ":out_of_order_actor_submit_queue",
         ":sequential_actor_submit_queue",
-        "//:worker_rpc",
         "//src/ray/common:asio",
         "//src/ray/common:id",
         "//src/ray/common:ray_object",
         "//src/ray/gcs:gcs_pb_util",
         "//src/ray/gcs/gcs_client:gcs_client_lib",
+        "//src/ray/rpc:core_worker_rpc",
         "@com_google_absl//absl/base:core_headers",
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/container:flat_hash_set",
@@ -345,11 +345,11 @@ ray_cc_library(
     srcs = ["transport/scheduling_util.cc"],
     hdrs = ["transport/scheduling_util.h"],
     deps = [
-        "//:rpc_server_call",
         "//src/ray/common:id",
         "//src/ray/common:task_common",
-        "//src/ray/protobuf:worker_cc_proto",
+        "//src/ray/protobuf:core_worker_cc_proto",
         "//src/ray/raylet_client:raylet_client_lib",
+        "//src/ray/rpc:server_call",
     ],
 )
 
@@ -360,9 +360,9 @@ ray_cc_library(
     deps = [
         "scheduling_queue",
         ":scheduling_util",
-        "//:rpc_server_call",
         "//src/ray/common:id",
         "//src/ray/common:task_common",
+        "//src/ray/rpc:server_call",
         "@com_google_absl//absl/base:core_headers",
         "@com_google_absl//absl/synchronization",
     ],
@@ -379,11 +379,11 @@ ray_cc_library(
         ":scheduling_util",
         ":task_event_buffer",
         ":thread_pool",
-        "//:rpc_server_call",
         "//src/ray/common:id",
         "//src/ray/common:task_common",
-        "//src/ray/protobuf:worker_cc_proto",
+        "//src/ray/protobuf:core_worker_cc_proto",
         "//src/ray/raylet_client:raylet_client_lib",
+        "//src/ray/rpc:server_call",
         "@com_google_absl//absl/base:core_headers",
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/container:flat_hash_set",
@@ -413,11 +413,11 @@ ray_cc_library(
         ":scheduling_util",
         ":task_event_buffer",
         ":thread_pool",
-        "//:rpc_server_call",
         "//src/ray/common:id",
         "//src/ray/common:task_common",
-        "//src/ray/protobuf:worker_cc_proto",
+        "//src/ray/protobuf:core_worker_cc_proto",
         "//src/ray/raylet_client:raylet_client_lib",
+        "//src/ray/rpc:server_call",
         "@com_google_absl//absl/base:core_headers",
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/container:flat_hash_set",
@@ -443,12 +443,12 @@ ray_cc_library(
         ":normal_scheduling_queue",
         ":out_of_order_actor_scheduling_queue",
         ":thread_pool",
-        "//:rpc_server_call",
-        "//:worker_rpc",
         "//src/ray/common:asio",
         "//src/ray/common:id",
         "//src/ray/common:ray_object",
         "//src/ray/common:task_common",
+        "//src/ray/rpc:core_worker_rpc",
+        "//src/ray/rpc:server_call",
         "@com_google_absl//absl/base:core_headers",
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/container:flat_hash_set",
@@ -479,9 +479,9 @@ ray_cc_library(
     hdrs = ["future_resolver.h"],
     deps = [
         ":memory_store",
-        "//:worker_rpc",
         "//src/ray/common:grpc_util",
         "//src/ray/common:id",
+        "//src/ray/rpc:core_worker_rpc",
     ],
 )
 
@@ -491,8 +491,8 @@ ray_cc_library(
     hdrs = ["experimental_mutable_object_provider.h"],
     deps = [
         ":experimental_mutable_object_manager",
-        "//:rpc_client_call",
         "//src/ray/raylet_client:raylet_client_lib",
+        "//src/ray/rpc:client_call",
     ],
 )
 
@@ -564,10 +564,10 @@ ray_cc_library(
         ":memory_store",
         ":task_manager",
         ":task_receiver",
-        "//:worker_rpc",
         "//src/ray/common:id",
         "//src/ray/gcs:gcs_pb_util",
         "//src/ray/raylet_client:raylet_client_lib",
+        "//src/ray/rpc:core_worker_rpc",
         "@com_google_absl//absl/base:core_headers",
     ],
 )
