--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -109,325 +109,6 @@ refresh_compile_commands(
     },
 )
 
-# === Begin of rpc definitions ===
-# GRPC common lib.
-ray_cc_library(
-    name = "grpc_common_base",
-    srcs = ["src/ray/rpc/common.cc"],
-    hdrs = ["src/ray/rpc/common.h"],
-)
-
-ray_cc_library(
-    name = "rpc_chaos",
-    srcs = ["src/ray/rpc/rpc_chaos.cc"],
-    hdrs = ["src/ray/rpc/rpc_chaos.h"],
-    deps = [
-        "//src/ray/common:ray_config",
-        "@com_google_absl//absl/container:flat_hash_map",
-        "@com_google_absl//absl/synchronization",
-    ],
-)
-
-ray_cc_library(
-    name = "rpc_client_call",
-    hdrs = ["src/ray/rpc/client_call.h"],
-    deps = [
-        "//src/ray/common:asio",
-        "//src/ray/common:grpc_util",
-        "//src/ray/common:id",
-        "//src/ray/common:status",
-        "@com_google_absl//absl/synchronization",
-    ],
-)
-
-ray_cc_library(
-    name = "grpc_client",
-    hdrs = ["src/ray/rpc/grpc_client.h"],
-    deps = [
-        ":grpc_common_base",
-        ":rpc_chaos",
-        ":rpc_client_call",
-        "//src/ray/common:grpc_util",
-        "//src/ray/common:ray_config",
-        "//src/ray/common:status",
-    ],
-)
-
-ray_cc_library(
-    name = "rpc_server_call",
-    srcs = ["src/ray/rpc/server_call.cc"],
-    hdrs = ["src/ray/rpc/server_call.h"],
-    deps = [
-        "//src/ray/common:asio",
-        "//src/ray/common:grpc_util",
-        "//src/ray/common:id",
-        "//src/ray/common:ray_config",
-        "//src/ray/common:status",
-        "//src/ray/stats:stats_metric",
-        "@com_github_grpc_grpc//:grpc++",
-    ],
-)
-
-ray_cc_library(
-    name = "retryable_grpc_client",
-    srcs = ["src/ray/rpc/retryable_grpc_client.cc"],
-    hdrs = ["src/ray/rpc/retryable_grpc_client.h"],
-    deps = [
-        ":grpc_client",
-        ":rpc_client_call",
-        "@com_google_absl//absl/container:btree",
-        "@com_google_absl//absl/strings:str_format",
-        "@com_google_absl//absl/time",
-    ],
-)
-
-ray_cc_library(
-    name = "metrics_agent_client",
-    hdrs = ["src/ray/rpc/metrics_agent_client.h"],
-    deps = [
-        ":grpc_client",
-        "//src/ray/protobuf:reporter_cc_proto",
-        "//src/ray/util:logging",
-        "@com_github_grpc_grpc//:grpc++",
-    ],
-)
-
-ray_cc_library(
-    name = "event_aggregator_client",
-    hdrs = ["src/ray/rpc/event_aggregator_client.h"],
-    deps = [
-        ":event_aggregator_cc_rpc",
-        ":grpc_client",
-        "//src/ray/common:status",
-        "//src/ray/protobuf:events_event_aggregator_service_cc_proto",
-        "//src/ray/util:logging",
-        "@com_github_grpc_grpc//:grpc++",
-    ],
-)
-
-ray_cc_library(
-    name = "grpc_server",
-    srcs = ["src/ray/rpc/grpc_server.cc"],
-    hdrs = ["src/ray/rpc/grpc_server.h"],
-    deps = [
-        ":grpc_common_base",
-        ":rpc_server_call",
-        "//src/ray/common:asio",
-        "//src/ray/common:ray_config",
-        "//src/ray/common:status",
-        "//src/ray/util:thread_utils",
-        "@com_github_grpc_grpc//:grpc++",
-        "@com_github_grpc_grpc//:grpc++_reflection",
-        "@com_github_grpc_grpc//:grpcpp_admin",
-    ],
-)
-
-ray_cc_library(
-    name = "grpc_common_lib",
-    # TODO(core): Both two header files are not needed, keep them there because of circular dependency between raylet and node rpc.
-    hdrs = [
-        "//src/ray/raylet_client:raylet_client.h",
-        "//src/ray/raylet_client:raylet_connection.h",
-    ],
-    # TODO(core): These three dependencies come from raylet client, should be able to remove after we split node rpc and raylet client into smaller targets.
-    deps = [
-        "//src/ray/common:network",
-        "//src/ray/common:ray_object",
-        "//src/ray/common:task_common",
-    ] + [
-        ":event_aggregator_client",
-        ":grpc_client",
-        ":grpc_common_base",
-        ":grpc_server",
-        ":metrics_agent_client",
-        ":retryable_grpc_client",
-        ":rpc_chaos",
-        ":rpc_server_call",
-    ],
-)
-
-# Node manager gRPC lib.
-cc_grpc_library(
-    name = "node_manager_cc_grpc",
-    srcs = ["//src/ray/protobuf:node_manager_proto"],
-    grpc_only = True,
-    deps = ["//src/ray/protobuf:node_manager_cc_proto"],
-)
-
-# Node manager server and client.
-ray_cc_library(
-    name = "node_manager_rpc",
-    srcs = ["src/ray/rpc/node_manager/raylet_client_pool.cc"],
-    hdrs = [
-        "src/ray/rpc/node_manager/node_manager_client.h",
-        "src/ray/rpc/node_manager/node_manager_server.h",
-        "src/ray/rpc/node_manager/raylet_client_pool.h",
-    ],
-    deps = [
-        ":grpc_common_lib",
-        ":node_manager_cc_grpc",
-        "//src/ray/common:asio",
-        "//src/ray/common:id",
-        "//src/ray/common:status",
-        "@com_github_grpc_grpc//:grpc++",
-    ],
-)
-
-# gcs_service gRPC lib.
-cc_grpc_library(
-    name = "gcs_service_cc_grpc",
-    srcs = ["//src/ray/protobuf:gcs_service_proto"],
-    grpc_only = True,
-    deps = ["//src/ray/protobuf:gcs_service_cc_proto"],
-)
-
-# gcs_service gRPC lib.
-cc_grpc_library(
-    name = "test_service_cc_grpc",
-    srcs = ["//src/ray/protobuf:test_service_proto"],
-    grpc_only = True,
-    deps = ["//src/ray/protobuf:test_service_cc_proto"],
-)
-
-# gcs rpc server and client.
-ray_cc_library(
-    name = "gcs_service_rpc",
-    hdrs = [
-        "src/ray/rpc/gcs_server/gcs_rpc_client.h",
-        "src/ray/rpc/gcs_server/gcs_rpc_server.h",
-    ],
-    deps = [
-        ":autoscaler_cc_grpc",
-        ":gcs_service_cc_grpc",
-        ":grpc_common_lib",
-        "//src/ray/common:asio",
-        "//src/ray/common:id",
-        "//src/ray/pubsub:pubsub_lib",
-        "@boost//:asio",
-        "@com_github_grpc_grpc//:grpc++",
-        "@com_google_absl//absl/container:btree",
-    ],
-)
-
-# Object manager gRPC lib.
-cc_grpc_library(
-    name = "object_manager_cc_grpc",
-    srcs = ["//src/ray/protobuf:object_manager_proto"],
-    grpc_only = True,
-    deps = ["//src/ray/protobuf:object_manager_cc_proto"],
-)
-
-# Object manager rpc server and client.
-ray_cc_library(
-    name = "object_manager_rpc",
-    hdrs = [
-        "src/ray/rpc/object_manager/object_manager_client.h",
-        "src/ray/rpc/object_manager/object_manager_server.h",
-    ],
-    deps = [
-        ":grpc_common_lib",
-        ":object_manager_cc_grpc",
-        "//src/ray/common:asio",
-        "//src/ray/common:status",
-        "//src/ray/object_manager:object_manager_grpc_client_manager",
-        "@boost//:asio",
-        "@com_github_grpc_grpc//:grpc++",
-    ],
-)
-
-# Worker gRPC lib.
-cc_grpc_library(
-    name = "worker_cc_grpc",
-    srcs = ["//src/ray/protobuf:core_worker_proto"],
-    grpc_only = True,
-    deps = ["//src/ray/protobuf:worker_cc_proto"],
-)
-
-# worker server and client.
-ray_cc_library(
-    name = "worker_rpc",
-    srcs = [
-        "src/ray/rpc/worker/core_worker_client.cc",
-        "src/ray/rpc/worker/core_worker_client_pool.cc",
-    ],
-    hdrs = [
-        "src/ray/rpc/worker/core_worker_client.h",
-        "src/ray/rpc/worker/core_worker_client_pool.h",
-        "src/ray/rpc/worker/core_worker_server.h",
-    ],
-    deps = [
-        ":grpc_common_lib",
-        ":worker_cc_grpc",
-        "//src/ray/common:asio",
-        "//src/ray/common:id",
-        "//src/ray/gcs/gcs_client:gcs_client_lib",
-        "//src/ray/pubsub:pubsub_lib",
-        "//src/ray/raylet_client:raylet_client_lib",
-        "@com_github_grpc_grpc//:grpc++",
-    ],
-)
-
-# Metrics Agent gRPC lib.
-cc_grpc_library(
-    name = "reporter_cc_grpc",
-    srcs = ["//src/ray/protobuf:reporter_proto"],
-    grpc_only = True,
-    deps = ["//src/ray/protobuf:reporter_cc_proto"],
-)
-
-# Metrics Agent client.
-ray_cc_library(
-    name = "reporter_rpc",
-    hdrs = [
-        "src/ray/rpc/metrics_agent_client.h",
-    ],
-    deps = [
-        ":grpc_common_lib",
-        ":reporter_cc_grpc",
-        "//src/ray/common:status",
-        "@boost//:asio",
-        "@boost//:thread",
-        "@com_github_grpc_grpc//:grpc++",
-    ],
-)
-
-cc_grpc_library(
-    name = "event_aggregator_cc_rpc",
-    srcs = ["//src/ray/protobuf:events_event_aggregator_service_proto"],
-    grpc_only = True,
-    deps = ["//src/ray/protobuf:events_event_aggregator_service_cc_proto"],
-)
-
-# pubsub.
-cc_grpc_library(
-    name = "pubsub_cc_grpc",
-    srcs = ["//src/ray/protobuf:pubsub_proto"],
-    grpc_only = True,
-    deps = [
-        "//src/ray/protobuf:common_cc_proto",
-        "//src/ray/protobuf:gcs_cc_proto",
-        "//src/ray/protobuf:pubsub_cc_proto",
-    ],
-)
-
-cc_grpc_library(
-    name = "autoscaler_cc_grpc",
-    srcs = ["//src/ray/protobuf:autoscaler_proto"],
-    grpc_only = True,
-    deps = [
-        "//src/ray/protobuf:autoscaler_cc_proto",
-    ],
-)
-
-ray_cc_library(
-    name = "autoscaler_rpc",
-    deps = [
-        ":autoscaler_cc_grpc",
-    ],
-)
-
-# === End of rpc definitions ===
-
 ray_cc_library(
     name = "ray_mock",
     hdrs = glob(
@@ -495,15 +176,6 @@ ray_cc_binary(
 )
 
 ray_cc_library(
-    name = "pubsub_rpc",
-    # TODO(core): Revisit this dependency after grpc_common_lib is broken down into smaller targets.
-    deps = [
-        ":grpc_common_lib",  # This is a large dependency, should be refined in the future.
-        ":pubsub_cc_grpc",
-    ],
-)
-
-ray_cc_library(
     name = "raylet_agent_manager",
     srcs = ["src/ray/raylet/agent_manager.cc"],
     hdrs = ["src/ray/raylet/agent_manager.h"],
@@ -526,11 +198,11 @@ ray_cc_library(
     hdrs = ["src/ray/raylet/worker.h"],
     deps = [
         ":node_manager_fbs",
-        ":worker_rpc",
         "//src/ray/common:id",
         "//src/ray/common:network",
         "//src/ray/common:task_common",
         "//src/ray/raylet/scheduling:cluster_resource_scheduler",
+        "//src/ray/rpc:core_worker_rpc",
         "//src/ray/util:process",
         "@com_google_absl//absl/memory",
         "@com_google_absl//absl/time",
@@ -603,7 +275,6 @@ ray_cc_library(
     deps = [
         ":local_object_manager_interface",
         ":worker_pool",
-        ":worker_rpc",
         "//src/ray/common:id",
         "//src/ray/common:ray_object",
         "//src/ray/gcs/gcs_client:gcs_client_lib",
@@ -611,6 +282,7 @@ ray_cc_library(
         "//src/ray/object_manager:object_manager_common",
         "//src/ray/protobuf:node_manager_cc_proto",
         "//src/ray/pubsub:subscriber_lib",
+        "//src/ray/rpc:core_worker_rpc",
     ],
 )
 
@@ -648,13 +320,11 @@ ray_cc_library(
         ":local_object_manager",
         ":local_object_manager_interface",
         ":node_manager_fbs",
-        ":node_manager_rpc",
         ":raylet_agent_manager",
         ":runtime_env_agent_client",
         ":wait_manager",
         ":worker",
         ":worker_pool",
-        ":worker_rpc",
         "//src/ray/common:memory_monitor",
         "//src/ray/core_worker:experimental_mutable_object_provider",
         "//src/ray/gcs",
@@ -666,6 +336,8 @@ ray_cc_library(
         "//src/ray/protobuf:runtime_env_agent_cc_proto",
         "//src/ray/pubsub:pubsub_lib",
         "//src/ray/raylet/scheduling:scheduler",
+        "//src/ray/rpc:core_worker_rpc",
+        "//src/ray/rpc:node_manager_rpc",
         "//src/ray/stats:stats_lib",
         "//src/ray/util:cmd_line_utils",
         "//src/ray/util:container_util",
@@ -854,47 +526,6 @@ ray_cc_test(
     deps = [
         ":ray_common",
         ":raylet_lib",
-        "@com_google_googletest//:gtest_main",
-    ],
-)
-
-ray_cc_test(
-    name = "grpc_server_client_test",
-    size = "small",
-    srcs = [
-        "src/ray/rpc/test/grpc_server_client_test.cc",
-    ],
-    tags = ["team:core"],
-    deps = [
-        ":grpc_common_lib",
-        ":test_service_cc_grpc",
-        "@com_google_googletest//:gtest_main",
-    ],
-)
-
-ray_cc_test(
-    name = "rpc_chaos_test",
-    size = "small",
-    srcs = [
-        "src/ray/rpc/test/rpc_chaos_test.cc",
-    ],
-    tags = ["team:core"],
-    deps = [
-        ":grpc_common_lib",
-        "@com_google_googletest//:gtest_main",
-    ],
-)
-
-ray_cc_test(
-    name = "core_worker_client_pool_test",
-    size = "small",
-    srcs = [
-        "src/ray/rpc/worker/test/core_worker_client_pool_test.cc",
-    ],
-    tags = ["team:core"],
-    deps = [
-        ":ray_mock",
-        ":worker_rpc",
         "@com_google_googletest//:gtest_main",
     ],
 )
