--- a/src/ray/core_worker/test/BUILD.bazel
+++ b/src/ray/core_worker/test/BUILD.bazel
@@ -34,12 +34,12 @@ ray_cc_test(
     tags = ["team:core"],
     deps = [
         "//:ray_mock",
-        "//:worker_rpc",
         "//src/ray/common:asio",
         "//src/ray/common:task_common",
         "//src/ray/common:test_util",
         "//src/ray/core_worker:normal_task_submitter",
         "//src/ray/core_worker:reference_count",
+        "//src/ray/rpc:core_worker_rpc",
         "@com_google_googletest//:gtest",
         "@com_google_googletest//:gtest_main",
     ],
@@ -51,13 +51,13 @@ ray_cc_test(
     tags = ["team:core"],
     deps = [
         "//:ray_mock",
-        "//:worker_rpc",
         "//src/ray/common:asio",
         "//src/ray/common:task_common",
         "//src/ray/common:test_util",
         "//src/ray/core_worker:actor_creator",
         "//src/ray/core_worker:reference_count",
         "//src/ray/core_worker:task_manager",
+        "//src/ray/rpc:core_worker_rpc",
         "@com_google_googletest//:gtest",
         "@com_google_googletest//:gtest_main",
     ],
@@ -86,12 +86,12 @@ ray_cc_test(
     tags = ["team:core"],
     deps = [
         "//:ray_mock",
-        "//:worker_rpc",
         "//src/ray/common:task_common",
         "//src/ray/common:test_util",
         "//src/ray/core_worker:dependency_resolver",
         "//src/ray/core_worker:memory_store",
         "//src/ray/raylet_client:raylet_client_lib",
+        "//src/ray/rpc:core_worker_rpc",
         "@com_google_googletest//:gtest",
         "@com_google_googletest//:gtest_main",
     ],
@@ -105,12 +105,12 @@ ray_cc_test(
     deps = [
         "//:ray_fakes",
         "//:ray_mock",
-        "//:worker_rpc",
         "//src/ray/common:task_common",
         "//src/ray/common:test_util",
         "//src/ray/core_worker:core_worker_lib",
         "//src/ray/core_worker:memory_store",
         "//src/ray/raylet_client:raylet_client_lib",
+        "//src/ray/rpc:core_worker_rpc",
         "@com_google_googletest//:gtest",
         "@com_google_googletest//:gtest_main",
     ],
