--- a/src/ray/gcs/BUILD.bazel
+++ b/src/ray/gcs/BUILD.bazel
@@ -52,6 +52,6 @@ ray_cc_library(
         ":gcs_pb_util",
         ":gcs_redis_client",
         "//:node_manager_fbs",
-        "//:node_manager_rpc",
+        "//src/ray/rpc:node_manager_rpc",
     ],
 )
