--- a/src/ray/gcs/gcs_server/BUILD.bazel
+++ b/src/ray/gcs/gcs_server/BUILD.bazel
@@ -45,10 +45,10 @@ ray_cc_library(
     srcs = ["gcs_kv_manager.cc"],
     hdrs = ["gcs_kv_manager.h"],
     deps = [
-        "//:gcs_service_rpc",
         "//src/ray/common:asio",
         "//src/ray/common:status",
         "//src/ray/protobuf:gcs_cc_proto",
+        "//src/ray/rpc:gcs_service_rpc",
     ],
 )
 
@@ -101,10 +101,10 @@ ray_cc_library(
     srcs = ["runtime_env_handler.cc"],
     hdrs = ["runtime_env_handler.h"],
     deps = [
-        "//:gcs_service_rpc",
-        "//:node_manager_rpc",
         "//src/ray/common:runtime_env",
         "//src/ray/protobuf:gcs_cc_proto",
+        "//src/ray/rpc:gcs_service_rpc",
+        "//src/ray/rpc:node_manager_rpc",
         "//src/ray/util:thread_checker",
     ],
 )
@@ -128,8 +128,8 @@ ray_cc_library(
         ":gcs_kv_manager",
         ":gcs_table_storage",
         ":gcs_usage_stats_client",
-        "//:gcs_service_rpc",
         "//src/ray/gcs/pubsub:gcs_pub_sub_lib",
+        "//src/ray/rpc:gcs_service_rpc",
         "//src/ray/stats:stats_metric",
     ],
 )
@@ -191,11 +191,11 @@ ray_cc_library(
         ":gcs_function_manager",
         ":gcs_init_data",
         ":gcs_table_storage",
-        "//:gcs_service_rpc",
-        "//:worker_rpc",
         "//src/ray/common:runtime_env",
         "//src/ray/gcs:gcs_pb_util",
         "//src/ray/gcs/pubsub:gcs_pub_sub_lib",
+        "//src/ray/rpc:core_worker_rpc",
+        "//src/ray/rpc:gcs_service_rpc",
         "//src/ray/stats:stats_metric",
         "//src/ray/util:event",
         "//src/ray/util:thread_checker",
@@ -242,16 +242,16 @@ ray_cc_library(
         ":gcs_task_manager",
         ":gcs_usage_stats_client",
         ":gcs_worker_manager",
-        "//:autoscaler_rpc",
-        "//:gcs_service_cc_grpc",
-        "//:gcs_service_rpc",
-        "//:node_manager_rpc",
-        "//:worker_rpc",
         "//src/ray/gcs/pubsub:gcs_pub_sub_lib",
         "//src/ray/gcs/store_client:gcs_observable_store_client",
+        "//src/ray/protobuf:autoscaler_cc_grpc",
+        "//src/ray/protobuf:gcs_service_cc_grpc",
         "//src/ray/pubsub:pubsub_lib",
         "//src/ray/raylet/scheduling:scheduler",
         "//src/ray/raylet_client:raylet_client_lib",
+        "//src/ray/rpc:core_worker_rpc",
+        "//src/ray/rpc:gcs_service_rpc",
+        "//src/ray/rpc:node_manager_rpc",
         "//src/ray/util:counter_map",
         "//src/ray/util:thread_checker",
         "//src/ray/util:throttler",
