--- a/src/ray/gcs/test/BUILD.bazel
+++ b/src/ray/gcs/test/BUILD.bazel
@@ -6,9 +6,9 @@ ray_cc_library(
         "gcs_test_util.h",
     ],
     deps = [
-        "//:gcs_service_rpc",
         "//src/ray/common:test_util",
         "//src/ray/gcs:gcs_pb_util",
+        "//src/ray/rpc:gcs_service_rpc",
     ],
 )
 
