--- a/src/ray/rpc/test/grpc_bench/BUILD.bazel
+++ b/src/ray/rpc/test/grpc_bench/BUILD.bazel
@@ -26,6 +26,6 @@ cc_binary(
     copts = COPTS,
     deps = [
         ":helloworld_cc_lib",
-        "//:grpc_common_lib",
+        "//src/ray/rpc:grpc_common_lib",
     ],
 )
