[wheel] convert `:ray_pkg` references to `:gen_ray_pkg` (#55180)
getting closer to deleting `:ray_pkg` rule from code base

Signed-off-by: Lonnie Liu <lonnie@anyscale.com>
Signed-off-by: jugalshah291 <shah.jugal291@gmail.com>

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -96,7 +96,7 @@ refresh_compile_commands(
     # Specify the targets of interest.
     # For example, specify a dict of targets and any flags required to build.
     targets = {
-        "//:ray_pkg": "",
+        "//:ray_pkg_zip": "",
     },
     # No need to add flags already in .bazelrc. They're automatically picked up.
 )
@@ -105,7 +105,7 @@ refresh_compile_commands(
 refresh_compile_commands(
     name = "refresh_compile_commands_external_sources",
     targets = {
-        "//:ray_pkg": "",
+        "//:ray_pkg_zip": "",
     },
 )
 
