[core] install smart_open[s3] in the image (#55049)
To support s3-compatible storage on `working_dir`, this PR installs
`smart_open[s3]` while building the base-deps image.

Closes https://github.com/ray-project/ray/issues/54746

---------

Signed-off-by: fscnick <fscnick.dev@gmail.com>
Signed-off-by: jugalshah291 <shah.jugal291@gmail.com>

--- a/docker/base-deps/Dockerfile
+++ b/docker/base-deps/Dockerfile
@@ -92,6 +92,7 @@ PIP_PKGS=(
     cython
     numpy  # Necessary for Dataset to work properly.
     psutil
+    smart_open[s3]
 )
 if [[ "$AUTOSCALER" == "autoscaler" ]]; then
     PIP_PKGS+=(
