[wheel] do not depend on `:ray_pkg` from java (#55181)
depends on `//:ray_pkg_zip` instead, with comment asking user to
manually run `//:gen_ray_pkg`

the java test rules are not conventional, hermetic ones, but "local"
ones that run in the source code directory. the ray core rules are all
converted to non-local, hermetic build rules, and we are deprecating the
local `ray_pkg` one. as a result, for the java rules to run, one has to
manually run the `bazel run //:gen_ray_pkg` to copy the ray core bits
back to the source directory.

Signed-off-by: Lonnie Liu <lonnie@anyscale.com>
Signed-off-by: jugalshah291 <shah.jugal291@gmail.com>

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -776,7 +776,7 @@ pkg_zip(
         "//conditions:default": [],
     }),
     out = "ray_pkg.zip",
-    visibility = ["//visibility:private"],
+    visibility = ["//java:__pkg__"],
 )
 
 genrule(
