[Core] [Azure] Adding ability to specify availability zones for ray cluster node pools on Azure
Signed-off-by: Mark Rossett <marosset@microsoft.com>

--- a/python/ray/autoscaler/azure/defaults.yaml
+++ b/python/ray/autoscaler/azure/defaults.yaml
@@ -61,6 +61,7 @@ available_node_types:
                 imageOffer: ubuntu-1804
                 imageSku: 1804-gen2
                 imageVersion: latest
+                zones: ["None"]
 
     ray.worker.default:
         # The minimum number of nodes of this type to launch.
@@ -82,6 +83,8 @@ available_node_types:
                 # set a maximum price for spot instances if desired
                 # billingProfile:
                 #     maxPrice: -1
+                # Nodes will not be assigned availability zones
+                zones: ["None"]
 
 # Specify the node type of the head node (as configured above).
 head_node_type: ray.head.default
