--- a/python/ray/autoscaler/azure/example-availability-zones.yaml
+++ b/python/ray/autoscaler/azure/example-availability-zones.yaml
@@ -39,7 +39,7 @@ available_node_types:
         imageOffer: ubuntu-2004
         imageSku: 2004-gen2
         imageVersion: latest
-        # Workers will be assigned to avaibility zones 2 and 3 in a round-robin manner.
+        # Workers will be assigned to availability zones 2 and 3 in a round-robin manner.
         zones: ["2", "3"]
   ray.worker.any_zone:
     min_workers: 0
@@ -52,13 +52,14 @@ available_node_types:
         imageOffer: ubuntu-2004
         imageSku: 2004-gen2
         imageVersion: latest
-        # Workers will be assigned to avability zones by Azure
+        # Workers will be assigned to availability zones by Azure
         zones: []
 
 # Note: The Ubuntu 20.04 dsvm image has a few venvs already configured but
 # they all contain python modules that are not compatible with Ray at the moment.
 setup_commands:
     - (which conda && echo 'eval "$(conda shell.bash hook)"' >> ~/.bashrc) || true
+    - conda tos accept
     - conda create -n ray-env python=3.10 -y
     - conda activate ray-env && echo 'conda activate ray-env' >> ~/.bashrc
     - which ray || pip install -U "ray[default] @ https://s3-us-west-2.amazonaws.com/ray-wheels/latest/ray-3.0.0.dev0-cp310-cp310-manylinux2014_x86_64.whl"
