[core][1eventx/04] job event: use a separated thread (#55395)
This is part of a series of PRs to support JobEvent in the oneevent
framework. The full effort will include adding the JobEvent schema,
introducing a generic interface for exporting different types of events
to the Event Aggregator, and implementing the necessary integration
logic.

------------------

In this PR, we improve the isolation of the event exporting job from
other GCS components by using separate threads for periodic execution
and gRPC request handling.

Test:
- CI

---------

Signed-off-by: Cuong Nguyen <can@anyscale.com>

--- a/src/ray/gcs/gcs_server/tests/BUILD.bazel
+++ b/src/ray/gcs/gcs_server/tests/BUILD.bazel
@@ -128,6 +128,7 @@ ray_cc_test(
         "//src/ray/gcs/gcs_server:gcs_job_manager",
         "//src/ray/gcs/gcs_server:gcs_kv_manager",
         "//src/ray/gcs/store_client:in_memory_store_client",
+        "//src/ray/observability:fake_ray_event_recorder",
         "@com_google_googletest//:gtest_main",
     ],
 )
@@ -395,6 +396,7 @@ ray_cc_test(
         "//src/ray/gcs/gcs_server:gcs_job_manager",
         "//src/ray/gcs/gcs_server:gcs_kv_manager",
         "//src/ray/gcs/store_client:in_memory_store_client",
+        "//src/ray/observability:fake_ray_event_recorder",
         "@com_google_googletest//:gtest_main",
     ],
 )
