--- a/src/ray/gcs/gcs_server/BUILD.bazel
+++ b/src/ray/gcs/gcs_server/BUILD.bazel
@@ -233,6 +233,7 @@ ray_cc_library(
     deps = [
         ":gcs_task_manager",
         "//src/ray/common:ray_syncer",
+        "//src/ray/observability:ray_event_recorder",
         "//src/ray/pubsub:gcs_publisher",
         "//src/ray/util:array",
         "//src/ray/util:type_traits",
@@ -250,6 +251,9 @@ ray_cc_library(
         ":grpc_service_interfaces",
         "//src/ray/common:protobuf_utils",
         "//src/ray/common:runtime_env",
+        "//src/ray/observability:ray_driver_job_definition_event",
+        "//src/ray/observability:ray_driver_job_execution_event",
+        "//src/ray/observability:ray_event_recorder_interface",
         "//src/ray/pubsub:gcs_publisher",
         "//src/ray/rpc:core_worker_client",
         "//src/ray/stats:stats_metric",
