--- a/src/ray/core_worker/BUILD.bazel
+++ b/src/ray/core_worker/BUILD.bazel
@@ -34,6 +34,7 @@ ray_cc_library(
         ":reference_count",
         ":shutdown_coordinator",
         ":task_event_buffer",
+        ":metrics",
         "//src/ray/common:protobuf_utils",
         "//src/ray/common/cgroup:cgroup_context",
         "//src/ray/common/cgroup:cgroup_manager",
@@ -393,5 +394,13 @@ ray_cc_library(
         "//src/ray/util:time",
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/container:flat_hash_set",
+    ],
+)
+
+ray_cc_library(
+    name = "metrics",
+    hdrs = ["metrics.h"],
+    deps = [
+        "//src/ray/stats:stats_lib",
     ],
 )
