[core][metric/04] redefine STATS_tasks using Metric class
Signed-off-by: Cuong Nguyen <can@anyscale.com>

--- a/src/ray/observability/BUILD.bazel
+++ b/src/ray/observability/BUILD.bazel
@@ -24,3 +24,13 @@ ray_cc_library(
         "@io_opencensus_cpp//opencensus/stats",
     ],
 )
+
+ray_cc_library(
+    name = "fake_metric",
+    hdrs = [
+        "fake_metric.h",
+    ],
+    deps = [
+        ":metric_interface",
+    ],
+)
