--- a/src/ray/protobuf/public/BUILD.bazel
+++ b/src/ray/protobuf/public/BUILD.bazel
@@ -10,6 +10,8 @@ proto_library(
         ":events_actor_task_definition_event_proto",
         ":events_driver_job_definition_event_proto",
         ":events_driver_job_execution_event_proto",
+        ":events_node_definition_event_proto",
+        ":events_node_lifecycle_event_proto",
         ":events_task_definition_event_proto",
         ":events_task_execution_event_proto",
         "//src/ray/protobuf:events_task_profile_events_proto",
@@ -90,6 +92,29 @@ proto_library(
 cc_proto_library(
     name = "events_driver_job_execution_event_cc_proto",
     deps = [":events_driver_job_execution_event_proto"],
+)
+
+proto_library(
+    name = "events_node_definition_event_proto",
+    srcs = ["events_node_definition_event.proto"],
+)
+
+cc_proto_library(
+    name = "events_node_definition_event_cc_proto",
+    deps = [":events_node_definition_event_proto"],
+)
+
+proto_library(
+    name = "events_node_lifecycle_event_proto",
+    srcs = ["events_node_lifecycle_event.proto"],
+    deps = [
+        "@com_google_protobuf//:timestamp_proto",
+    ],
+)
+
+cc_proto_library(
+    name = "events_node_lifecycle_event_cc_proto",
+    deps = [":events_node_lifecycle_event_proto"],
 )
 
 proto_library(
