--- a/python/ray/serve/tests/BUILD.bazel
+++ b/python/ray/serve/tests/BUILD.bazel
@@ -38,6 +38,7 @@ py_test_module_list(
         "test_cluster_node_info_cache.py",
         "test_constructor_failure.py",
         "test_controller.py",
+        "test_custom_metrics.py",
         "test_deployment_version.py",
         "test_enable_task_events.py",
         "test_expected_versions.py",
