remove unused method and decouple PlasmaClientInterface
Signed-off-by: Sagar Sumit <sagarsumit09@gmail.com>

--- a/src/fakes/ray/object_manager/plasma/BUILD.bazel
+++ b/src/fakes/ray/object_manager/plasma/BUILD.bazel
@@ -7,6 +7,6 @@ ray_cc_library(
         "//src/ray/common:buffer",
         "//src/ray/common:id",
         "//src/ray/common:status",
-        "//src/ray/object_manager/plasma:plasma_client",
+        "//src/ray/object_manager/plasma:plasma_client_interface",
     ],
 )
