--- a/src/ray/object_manager/plasma/BUILD.bazel
+++ b/src/ray/object_manager/plasma/BUILD.bazel
@@ -52,6 +52,19 @@ ray_cc_library(
 )
 
 ray_cc_library(
+    name = "plasma_client_interface",
+    hdrs = ["client.h"],
+    deps = [
+        "//src/ray/common:buffer",
+        "//src/ray/common:id",
+        "//src/ray/common:status",
+        "//src/ray/object_manager:object_manager_common",
+        "//src/ray/protobuf:common_cc_proto",
+        "@com_google_absl//absl/container:flat_hash_map",
+    ],
+)
+
+ray_cc_library(
     name = "plasma_shared_memory",
     srcs = ["shared_memory.cc"],
     hdrs = ["shared_memory.h"],
