--- a/src/ray/observability/BUILD.bazel
+++ b/src/ray/observability/BUILD.bazel
@@ -78,6 +78,34 @@ ray_cc_library(
 )
 
 ray_cc_library(
+    name = "ray_actor_definition_event",
+    srcs = [
+        "ray_actor_definition_event.cc",
+    ],
+    hdrs = [
+        "ray_actor_definition_event.h",
+    ],
+    deps = [
+        ":ray_event",
+        "//src/ray/protobuf/public:events_actor_definition_event_cc_proto",
+    ],
+)
+
+ray_cc_library(
+    name = "ray_actor_execution_event",
+    srcs = [
+        "ray_actor_execution_event.cc",
+    ],
+    hdrs = [
+        "ray_actor_execution_event.h",
+    ],
+    deps = [
+        ":ray_event",
+        "//src/ray/protobuf/public:events_actor_execution_event_cc_proto",
+    ],
+)
+
+ray_cc_library(
     name = "ray_event_recorder_interface",
     hdrs = [
         "ray_event_recorder_interface.h",
