--- a/python/requirements_compiled.txt
+++ b/python/requirements_compiled.txt
@@ -573,6 +573,25 @@ frozenlist==1.4.1
     #   aiosignal
 fs==2.4.16
     # via triad
+fsspec==2023.12.1
+    # via
+    #   -r python/requirements.txt
+    #   adlfs
+    #   dask
+    #   datasets
+    #   delta-sharing
+    #   etils
+    #   evaluate
+    #   getdaft
+    #   gradio-client
+    #   huggingface-hub
+    #   modin
+    #   pyiceberg
+    #   pytorch-lightning
+    #   s3fs
+    #   torch
+    #   torch-geometric
+    #   triad
 fugue==0.8.7
     # via statsforecast
 fugue-sql-antlr==0.2.0
@@ -684,7 +703,7 @@ graphviz==0.20.3
     # via -r python/requirements/test-requirements.txt
 greenlet==3.0.1
     # via sqlalchemy
-grpcio==1.66.2 ; python_version >= "3.10"
+grpcio==1.74.0 ; python_version >= "3.10"
     # via
     #   -r python/requirements.txt
     #   -r python/requirements/cloud-requirements.txt
