--- a/release/ray_release/byod/requirements_ml_byod_3.9.txt
+++ b/release/ray_release/byod/requirements_ml_byod_3.9.txt
@@ -968,10 +968,11 @@ fs==2.4.16 \
     # via
     #   -c release/ray_release/byod/requirements_compiled.txt
     #   triad
-fsspec[http]==2023.5.0 \
-    --hash=sha256:51a4ad01a5bb66fcc58036e288c0d53d3975a0df2a5dc59a93b59bade0391f2a \
-    --hash=sha256:b3b56e00fb93ea321bc9e5d9cf6f8522a0198b20eb24e02774d329e9c6fb84ce
+fsspec[http]==2023.12.1 \
+    --hash=sha256:6271f1d3075a378bfe432f6f42bf7e1d2a6ba74f78dd9b512385474c579146a0 \
+    --hash=sha256:c4da01a35ac65c853f833e43f67802c25213f560820d54ddf248f92eddd5e990
     # via
+    #   -c release/ray_release/byod/requirements_compiled.txt
     #   datasets
     #   evaluate
     #   gcsfs
@@ -1003,9 +1004,9 @@ gcs-oauth2-boto-plugin==3.0 \
     # via
     #   -c release/ray_release/byod/requirements_compiled.txt
     #   gsutil
-gcsfs==2023.5.0 \
-    --hash=sha256:02a815e1cf28197ab4f57335e89dc5df8744a065c7c956d42692b50a9e8f1625 \
-    --hash=sha256:4f2ebc41814de3f566f85dec208704cf19823b9d04a55fd12b3142aef9046525
+gcsfs==2023.12.1 \
+    --hash=sha256:c1ccfa9f84dca019cd334aaf7eb03cc1dc13c296717346927a9fd40255348f9c \
+    --hash=sha256:e86cc583fdf879e5ea2f87bab61738d26ec7e8972762a1e6c6ab758b1e1af99c
     # via -r release/ray_release/byod/requirements_ml_byod_3.9.in
 gevent==24.2.1 \
     --hash=sha256:03aa5879acd6b7076f6a2a307410fb1e0d288b84b03cdfd8c74db8b4bc882fc5 \
