--- a/src/ray/raylet/BUILD.bazel
+++ b/src/ray/raylet/BUILD.bazel
@@ -282,6 +282,8 @@ ray_cc_binary(
         "//src/ray/common:lease",
         "//src/ray/common:ray_config",
         "//src/ray/common:status",
+        "//src/ray/common/cgroup2:cgroup_manager",
+        "//src/ray/common/cgroup2:sysfs_cgroup_driver",
         "//src/ray/gcs/gcs_client:gcs_client_lib",
         "//src/ray/object_manager:ownership_object_directory",
         "//src/ray/raylet/scheduling:cluster_lease_manager",
