--- a/src/ray/common/cgroup2/BUILD.bazel
+++ b/src/ray/common/cgroup2/BUILD.bazel
@@ -1,13 +1,40 @@
 load("//bazel:ray.bzl", "ray_cc_library")
 
+config_setting(
+    name = "is_linux",
+    constraint_values = ["@platforms//os:linux"],
+)
+
+# Public targets.
+ray_cc_library(
+    name = "cgroup_manager",
+    srcs = select({
+        ":is_linux": ["cgroup_manager.cc"],
+        "//conditions:default": ["noop_cgroup_manager.cc"],
+    }),
+    hdrs = ["cgroup_manager.h"],
+    visibility = ["//visibility:public"],
+    deps = [
+        ":cgroup_driver_interface",
+        ":cgroup_manager_interface",
+        "//src/ray/common:status",
+        "//src/ray/common:status_or",
+    ] + select({
+        ":is_linux": [
+            ":scoped_cgroup_operation",
+            "//src/ray/util:logging",
+            "@com_google_absl//absl/strings",
+        ],
+        "//conditions:default": [],
+    }),
+)
+
 ray_cc_library(
     name = "cgroup_driver_interface",
     hdrs = [
         "cgroup_driver_interface.h",
     ],
-    target_compatible_with = [
-        "@platforms//os:linux",
-    ],
+    visibility = ["//visibility:public"],
     deps = [
         "//src/ray/common:status",
         "//src/ray/common:status_or",
@@ -19,66 +46,12 @@ ray_cc_library(
     hdrs = [
         "cgroup_manager_interface.h",
     ],
-    target_compatible_with = [
-        "@platforms//os:linux",
-    ],
-    deps = [
-        "//src/ray/common:status",
-        "//src/ray/common:status_or",
-    ],
-)
-
-config_setting(
-    name = "is_linux",
-    constraint_values = ["@platforms//os:linux"],
-)
-
-# This target is available for all platforms, but it compiles different
-# implementations for different platforms.
-ray_cc_library(
-    name = "cgroup_manager",
-    srcs = select({
-        ":is_linux": ["cgroup_manager.cc"],
-        "//conditions:default": ["noop_cgroup_manager.cc"],
-    }),
-    hdrs = ["cgroup_manager.h"] + select({
-        ":is_linux": ["scoped_cgroup_operation.h"],
-        "//conditions:default": [],
-    }),
     visibility = ["//visibility:public"],
     deps = [
-        ":cgroup_driver_interface",
-        ":cgroup_manager_interface",
         "//src/ray/common:status",
         "//src/ray/common:status_or",
-    ] + select({
-        ":is_linux": [
-            "//src/ray/util:logging",
-            "@com_google_absl//absl/strings",
-        ],
-        "//conditions:default": [],
-    }),
+    ],
 )
-
-# ray_cc_library(
-#     name = "cgroup_manager",
-#     srcs = ["cgroup_manager.cc"],
-#     hdrs = [
-#         "cgroup_manager.h",
-#         "scoped_cgroup_operation.h",
-#     ],
-#     target_compatible_with = [
-#         "@platforms//os:linux",
-#     ],
-#     deps = [
-#         ":cgroup_driver_interface",
-#         ":cgroup_manager_interface",
-#         "//src/ray/common:status",
-#         "//src/ray/common:status_or",
-#         "//src/ray/util:logging",
-#         "@com_google_absl//absl/strings",
-#     ],
-# )
 
 ray_cc_library(
     name = "sysfs_cgroup_driver",
@@ -89,6 +62,7 @@ ray_cc_library(
     target_compatible_with = [
         "@platforms//os:linux",
     ],
+    visibility = ["//visibility:public"],
     deps = [
         ":cgroup_driver_interface",
         "//src/ray/common:status",
@@ -96,6 +70,18 @@ ray_cc_library(
         "//src/ray/util:logging",
         "@com_google_absl//absl/strings",
     ],
+)
+
+# Private Targets.
+ray_cc_library(
+    name = "scoped_cgroup_operation",
+    hdrs = [
+        "scoped_cgroup_operation.h",
+    ],
+    target_compatible_with = [
+        "@platforms//os:linux",
+    ],
+    visibility = [":__subpackages__"],
 )
 
 ray_cc_library(
@@ -106,6 +92,7 @@ ray_cc_library(
     target_compatible_with = [
         "@platforms//os:linux",
     ],
+    visibility = [":__subpackages__"],
     deps = [
         ":cgroup_driver_interface",
         "//src/ray/common:status",
@@ -119,6 +106,7 @@ ray_cc_library(
     target_compatible_with = [
         "@platforms//os:linux",
     ],
+    visibility = [":__subpackages__"],
     deps = [
         "//src/ray/common:id",
         "//src/ray/common:status",
