--- a/src/ray/raylet/BUILD.bazel
+++ b/src/ray/raylet/BUILD.bazel
@@ -286,8 +286,8 @@ ray_cc_binary(
         "//src/ray/gcs/gcs_client:gcs_client_lib",
         "//src/ray/object_manager:ownership_object_directory",
         "//src/ray/raylet/scheduling:cluster_lease_manager",
-        "//src/ray/raylet_client:raylet_client_lib",
-        "//src/ray/raylet_client:raylet_client_pool",
+        "//src/ray/rpc:raylet_client_lib",
+        "//src/ray/rpc:raylet_client_pool",
         "//src/ray/rpc:metrics_agent_client",
         "//src/ray/stats:stats_lib",
         "//src/ray/util:cmd_line_utils",
