--- a/src/ray/rpc/raylet/tests/BUILD.bazel
+++ b/src/ray/rpc/raylet/tests/BUILD.bazel
@@ -8,7 +8,7 @@ ray_cc_test(
     deps = [
         "//src/fakes/ray/rpc/raylet:fake_raylet_client",
         "//src/ray/gcs/gcs_client:gcs_client_lib",
-        "//src/ray/raylet_client:raylet_client_pool",
+        "//src/ray/rpc:raylet_client_pool",
         "@com_google_googletest//:gtest",
         "@com_google_googletest//:gtest_main",
     ],
