--- a/src/ray/raylet/BUILD.bazel
+++ b/src/ray/raylet/BUILD.bazel
@@ -289,6 +289,7 @@ ray_cc_binary(
         "//src/ray/raylet_client:raylet_client_lib",
         "//src/ray/raylet_client:raylet_client_pool",
         "//src/ray/rpc:metrics_agent_client",
+        "//src/ray/rpc:object_manager_client",
         "//src/ray/stats:stats_lib",
         "//src/ray/util:cmd_line_utils",
         "//src/ray/util:event",
