--- a/src/ray/rpc/BUILD.bazel
+++ b/src/ray/rpc/BUILD.bazel
@@ -161,10 +161,20 @@ ray_cc_library(
     ],
     visibility = ["//visibility:public"],
     deps = [
+        "object_manager_client_interface",
         "//src/ray/object_manager:object_manager_grpc_client_manager",
         "//src/ray/protobuf:object_manager_cc_grpc",
         "//src/ray/util:logging",
         "@com_github_grpc_grpc//:grpc++",
+    ],
+)
+
+ray_cc_library(
+    name = "object_manager_client_interface",
+    hdrs = ["object_manager/object_manager_client_interface.h"],
+    deps = [
+        ":client_call",
+        "//src/ray/protobuf:object_manager_cc_proto",
     ],
 )
 
