--- a/src/ray/core_worker/task_submission/tests/BUILD.bazel
+++ b/src/ray/core_worker/task_submission/tests/BUILD.bazel
@@ -10,6 +10,7 @@ ray_cc_test(
         "//src/ray/common:task_common",
         "//src/ray/common:test_utils",
         "//src/ray/core_worker/task_submission:dependency_resolver",
+        "//src/ray/core_worker:fake_actor_creator",
         "@com_google_googletest//:gtest",
     ],
 )
@@ -49,6 +50,7 @@ ray_cc_test(
         "//src/ray/common:task_common",
         "//src/ray/common:test_utils",
         "//src/ray/core_worker:actor_creator",
+        "//src/ray/core_worker:fake_actor_creator",
         "//src/ray/core_worker:reference_count",
         "//src/ray/core_worker:task_manager",
         "//src/ray/rpc:core_worker_client",
@@ -68,6 +70,7 @@ ray_cc_test(
         "//src/fakes/ray/rpc/raylet:fake_raylet_client",
         "//src/ray/common:task_common",
         "//src/ray/common:test_utils",
+        "//src/ray/core_worker:fake_actor_creator",
         "//src/ray/core_worker:memory_store",
         "//src/ray/core_worker/task_submission:normal_task_submitter",
         "//src/ray/raylet_client:raylet_client_interface",
