[core][metric] Redefine STATS_tasks using Metric interface (#56015)
Currently, we have two metric definition systems: the legacy STATS_
macros and the newer Metric/Gauge/etc. API. We only need one. This PR
redefines STATS_tasks using the Metric interface. Over time, I’ll
migrate all STATS_ metrics to the new system and eventually remove the
old one.

In this new design:
- The tasks metric is defined at the `raylet/main.cc` and
`core_worker_process.cc` top level.
- It is passed down to sub-components through the MetricInterface.
- Sub-component test cases use the newly added `MockMetricInterface`
implementation.

Pure refactoring, no functional changes.

Test:
- CI

---------

Signed-off-by: Cuong Nguyen <can@anyscale.com>
Signed-off-by: jugalshah291 <shah.jugal291@gmail.com>

--- a/src/ray/core_worker/BUILD.bazel
+++ b/src/ray/core_worker/BUILD.bazel
@@ -28,6 +28,7 @@ ray_cc_library(
         ":generator_waiter",
         ":grpc_service",
         ":memory_store",
+        ":metrics",
         ":object_recovery_manager",
         ":plasma_store_provider",
         ":profile_event",
@@ -393,5 +394,13 @@ ray_cc_library(
         "//src/ray/util:time",
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/container:flat_hash_set",
+    ],
+)
+
+ray_cc_library(
+    name = "metrics",
+    hdrs = ["metrics.h"],
+    deps = [
+        "//src/ray/stats:stats_lib",
     ],
 )
