Add Ray Data check operator for data quality validation
Core implementation of ds.check() operator with:

- Expression and function-based validation
- Multiple violation policies: warn, drop, fail, quarantine
- Data quarantine system with schema evolution
- Chained checks with independent tracking
- Ray Data native writer integration
- Comprehensive error handling and validation

Modified files:
- dataset.py: Add check() method and completion hooks
- map_operator.py: Check logical operator
- plan_udf_map_op.py: Physical planning and execution
- planner.py: Register check operator
- BUILD: Add test_check_operator

New files:
- quarantine_manager.py: Quarantine data management
- data_quality_utils.py: Core utilities and error handling
- test_check_operator.py: Test suite structure

Signed-off-by: soffer-anyscale <stephen.offer@anyscale.com>

--- a/python/ray/data/BUILD
+++ b/python/ray/data/BUILD
@@ -1585,3 +1585,17 @@ py_test(
         "//:ray_lib",
     ],
 )
+
+py_test(
+    name = "test_check_operator",
+    size = "medium",
+    srcs = ["tests/test_check_operator.py"],
+    tags = [
+        "exclusive",
+        "team:data",
+    ],
+    deps = [
+        ":conftest",
+        "//:ray_lib",
+    ],
+)
